<resources>
    <string name="app_name">JWT Auth</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_profile_color">Profile color</string>

    <string name="text_login">Login</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_welcome">Hello, %1$s</string>

    <string name="prompt_login">Click here to login</string>
    <string name="prompt_signup">Click here to sign up</string>

    <string name="toast_no_empty_field">Please fill all fields</string>

    <string name="progress_signup">Sign up in progress…please wait</string>
    <string name="progress_login">Login in progress…please wait</string>
    <string name="progress_quote">Fetching quote…please wait</string>


    <string name="button_text_protected_quote">Get Quote</string>
    <string name="button_text_logout">Logout</string>
</resources>
