<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.segunfamisa.sample.jwt.LoginActivity">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_login"
            android:textSize="@dimen/text_title"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"/>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

        <EditText
            android:id="@+id/edit_profile_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:hint="@string/hint_profile_color"/>

        <Button
            android:id="@+id/button_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"/>

        <TextView
            android:id="@+id/prompt_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:padding="@dimen/text_padding"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/text_sign_up"/>
    </LinearLayout>
</ScrollView>
