<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.segunfamisa.sample.jwt.QuotesActivity">

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <Button
        android:id="@+id/button_random_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_username"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_text_protected_quote"/>

    <TextView
        android:id="@+id/text_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@id/button_random_quote"
        android:textStyle="italic"
        android:gravity="center"
        tools:text="Chuck Norris"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/button_text_logout"/>
</RelativeLayout>
